// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="display-flex-column display-flex-center"
>
  <span>
    <DrilldownLink
      ariaLabel="overview.see_more_details_on_x_y.1.0.metric.tests.name"
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        }
      }
      className="overview-measures-value text-light"
      component="my-project"
      metric="tests"
    >
      1
    </DrilldownLink>
  </span>
  <span
    className="spacer-top"
  >
    tests
  </span>
</div>
`;

exports[`should render correctly: measure not found 1`] = `
<div
  className="display-flex-column display-flex-center"
>
  <span
    className="overview-measures-value text-light"
  >
    -
  </span>
  <span
    className="spacer-top"
  >
    bugs
  </span>
</div>
`;
